Added campaign card

--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -34,6 +34,10 @@ $info: #0887c9;
 $warning: #f39834;
 $danger: #fb434a;
 
+// dai colors
+$dai-golden: #b68900;
+$dai-golden-light: #ffc20a;
+
 // Font Family
 $base__font-family: 'Nunito Sans', sans-serif !important;
 
