--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -1,3 +1,4 @@
+@import 'colors';
 .box-shadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -6,4 +7,8 @@
 }
 .design-border {
   border: 1px solid black;
+}
+
+.dai-golden {
+  color: $dai-golden !important;
 }
