--- a/src/components/CampaignComponents/CampaignCard/style.module.scss
+++ b/src/components/CampaignComponents/CampaignCard/style.module.scss
@@ -71,9 +71,10 @@
 }
 
 .descr {
-  padding-right: rem(100);
+  //padding-right: rem(100);
   font-style: italic;
   color: $black-lighten-more;
+  text-overflow: ellipsis;
 }
 
 .sizes {
@@ -138,4 +139,7 @@
   z-index: 100;
   top: rem(10);
   right: rem(15);
+}
+.dai {
+  color: $dai-golden !important;
 }
