Added border to campaign header

--- a/src/pages/campaign-page/style.module.scss
+++ b/src/pages/campaign-page/style.module.scss
@@ -1,5 +1,10 @@
+@import 'src/assets/styles/mixins';
 .panelHeader {
   font-size: 1.8rem;
   font-weight: bold;
   text-transform: capitalize;
+}
+
+.bottomBorder {
+  border-bottom: 1px solid $gray-border;
 }
