--- a/src/components/CleanUIComponents/ShortItemInfo/style.module.scss
+++ b/src/components/CleanUIComponents/ShortItemInfo/style.module.scss
@@ -24,6 +24,7 @@
 
   .actionData {
     font-size: rem(20);
+    color: $dai-golden;
   }
 }
 
@@ -63,12 +64,18 @@
   font-size: rem(11);
   margin-bottom: 0;
   color: $gray-darken;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100px;
+  display: block;
+  overflow: hidden;
 }
 
 .actionData {
+  color: $dai-golden;
   margin-bottom: rem(15);
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 2.5rem;
   font-weight: 700;
   font-size: rem(16);
 }
